begin some work on refactoring network code